--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.1.3.RELEASE'
 }
 
 group 'com.detroitlabs'
 version '1.0-SNAPSHOT'
-
+3
 sourceCompatibility = 1.8
 
 repositories {
@@ -12,5 +13,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf:2.1.3.RELEASE'
 }
