--- a/build.gradle
+++ b/build.gradle
@@ -3,16 +3,33 @@ plugins {
     id 'org.springframework.boot' version '2.1.3.RELEASE'
 }
 
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
 group 'com.detroitlabs'
 version '1.0-SNAPSHOT'
 3
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+bootJar {
+    baseName = 'gs-accessing-data-mysql'
+    version =  '0.1.0'
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE'
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf:2.1.3.RELEASE'
+    compile 'mysql:mysql-connector-java'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+
 }
